# ssrsblue

./: .gitignore  BLUEOS-RESEARCH.md  README.md
ardupilot-scripts/: README.md  motor_mixer.lua
blueos-gateway/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
blueos-gateway/examples/: demo.py  fetch_helpers.sh  test_post.sh
blueos-gateway/src/blueos_gateway/: config.py  gps_reader.py  main.py  mavlink_client.py  models.py  validators.py  vehicle_state.py  watchdog.py
blueos-gateway/src/blueos_gateway/routes/: commands.py  gps.py  status.py
blueos-gateway/tests/: test_gps_reader.py  test_gps_routes.py  test_mavlink_payloads.py  test_routes.py  test_validators.py
connector/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
connector/examples/: demo.py
connector/src/connector/: config.py  gps_reader.py  gps_state.py  main.py  mavlink_client.py  models.py  validators.py  vehicle_state.py  watchdog.py
connector/src/connector/routes/: commands.py  gps.py  status.py
connector/tests/: test_gps_reader.py  test_gps_routes.py  test_mavlink_payloads.py  test_routes.py  test_validators.py
controller-gamepad/: README.md  docker-compose.yml  requirements.txt
keelson-connector-blueos/: .dockerignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
keelson-controller-gamepad/: README.md  docker-compose.yml  requirements.txt
